[tool.poetry]
name = "tsp-space-scripts"
version = "0.1.0"
description = "A collection of scripts for TSP SPACE card program"
authors = ["watarinishin <watarichanno@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.24.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
toml = "^0.10.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
